--- a/.github/workflows/snowflake_devops_demo.yml
+++ b/.github/workflows/snowflake_devops_demo.yml
@@ -40,7 +40,23 @@ jobs:
           pip install schemachange
           pip install dbt-core
           pip install dbt-snowflake
+
+          cat <<EOF > /home/runner/.dbt/profiles.yml
+          prj1:
+          target: dev
+            outputs:
+              dev:
+                account: wvuvbew-wi67189
+                database: SRINI_P1
+                password: Srinu@407
+                role: ACCOUNTADMIN
+                schema: SRINI_P2
+                threads: 1
+                type: snowflake
+                user: srinivasde
+                warehouse: COMPUTE_WH
           
+
           echo "Step 2: Running schemachange"
           dbt compile
           schemachange -f $GITHUB_WORKSPACE/dbscripts -a $SF_ACCOUNT -u $SF_USERNAME -r $SF_ROLE -w $SF_WAREHOUSE -d $SF_DATABASE -c $SF_DATABASE.SCHEMACHANGE.CHANGE_HISTORY --create-change-history-table
