--- a/.github/workflows/snowflake_devops_demo.yml
+++ b/.github/workflows/snowflake_devops_demo.yml
@@ -58,5 +58,5 @@ jobs:
           EOF
 
           echo "Step 2: Running schemachange"
-          dbt compile
+          dbt compile --profile-dir /home/runner/.dbt --target dev
           schemachange -f $GITHUB_WORKSPACE/dbscripts -a $SF_ACCOUNT -u $SF_USERNAME -r $SF_ROLE -w $SF_WAREHOUSE -d $SF_DATABASE -c $SF_DATABASE.SCHEMACHANGE.CHANGE_HISTORY --create-change-history-table
