--- a/.github/workflows/snowflake_devops_demo.yml
+++ b/.github/workflows/snowflake_devops_demo.yml
@@ -35,6 +35,7 @@ jobs:
           SNOWFLAKE_PASSWORD: ${{ secrets.SF_PASSWORD }}
         run: |
           cd /home/runner
+          touch dbt_project.yml
           mkdir .dbt
           touch profiles.yml
           cat <<EOF > /home/runner/.dbt/profiles.yml
