--- a/.github/workflows/snowflake_devops_demo.yml
+++ b/.github/workflows/snowflake_devops_demo.yml
@@ -34,10 +34,10 @@ jobs:
           SF_DATABASE: ${{ secrets.SF_DATABASE }}
           SNOWFLAKE_PASSWORD: ${{ secrets.SF_PASSWORD }}
         run: |
-          cd /home/runner
-          touch dbt_project.yml
-          mkdir .dbt
-          touch profiles.yml
+          #cd /home/runner
+          #touch dbt_project.yml
+          #mkdir .dbt
+          #touch profiles.yml
           cat <<EOF > /home/runner/.dbt/profiles.yml
           prj1:
           target: dev
